add login component template

--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -1,3 +1,5 @@
-<p>contenu works!</p>
-
-<button type="button" class="btn btn-warning" (click)="get_all_users_c()">get users</button>
+<div class="container">
+    
+    <p>contenu component</p>
+    
+</div>
