height css & aute

--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-    
-    <p>contenu component</p>
-    
+<div class="container contenu">
+    <app-login></app-login>
 </div>
