--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-3 my-4 bg-success fixed-bottom"> 
+<footer class="py-3 my-4 bg-success"> 
     <ul class="nav justify-content-center border-bottom pb-3 mb-3"> 
         <li class="nav-item">
             <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
@@ -16,4 +16,5 @@
             <a href="#" class="nav-link px-2 text-body-secondary">About</a>
         </li> 
     </ul> 
-    <p class="text-center text-body-secondary">© 2025 Company, Inc</p> </footer> 
+    <p class="text-center text-body-secondary">© 2025 Company, Inc</p> 
+</footer> 
