add router login

--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -24,10 +24,7 @@
             </ul>
           </li>
         </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="text" placeholder="Search">
-            <button class="btn btn-primary" type="button">Search</button>
-        </form>
+          <a routerLink="login" class="d-flex btn btn-primary">Connection</a> <!-- redirect vers login component-->
       </div>
     </div>
   </nav>
