--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,29 @@
-<div class="row">
+<div class="row mt-3">
   <div class="col-md-6 order-md-2">
-    <img src="../../assets/login/undraw_file_sync_ot38.svg" alt="Image" class="img-fluid">
+    <img src="../../assets/login/undraw_file_sync_ot38.svg" alt="Image login" class="img-fluid">
   </div>
   <div class="col-md-6 contents">
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="mb-4">
-        <h3>Sign In to <strong>Colorlib</strong></h3>
-        <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
+        <h3>Page de connection</h3>
       </div>
       <form action="#" method="post">
         <div class="form-group first">
-          <label for="username">Username</label>
+          <label for="username">Login</label>
           <input type="text" class="form-control" id="username">
 
         </div>
         <div class="form-group last mb-4">
-          <label for="password">Password</label>
+          <label for="password">Mot de pass</label>
           <input type="password" class="form-control" id="password">
         </div>
         
         <div class="d-flex mb-5 align-items-center">
-          <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span> 
+          <span class="ml-auto"><a href="#" class="forgot-pass">Mot de pass oublié</a></span> 
         </div>
 
-        <input type="submit" value="Log In" class="btn text-white btn-block btn-primary">
+        <input type="submit" value="Connecter" class="btn text-white btn-block btn-success">
         
       </form>
       </div>
