--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,6 +26,8 @@
         <input type="submit" value="Connecter" class="btn text-white btn-block btn-success">
         
       </form>
+
+      <button class="btn btn-info" (click)="auth()">test login</button>
       </div>
     </div>
   </div>
