--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,6 +28,8 @@
       </form>
 
       <button class="btn btn-info" (click)="auth()">test login</button>
+      <br>
+      <button class="btn btn-danger" (click)="testme()">test token</button>
       </div>
     </div>
   </div>
