--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,6 +30,10 @@
       <button class="btn btn-info" (click)="auth()">test login</button>
       <br>
       <button class="btn btn-danger" (click)="testme()">test token</button>
+      <br>
+      <button class="btn btn-warning" (click)="test_lire()">test lire</button>
+      <br>
+      <button class="btn btn-light" (click)="test_ecrire()">test ecrire</button>
       </div>
     </div>
   </div>
