--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,29 +4,37 @@
   </div>
   <div class="col-md-6 contents">
     <div class="row justify-content-center">
-      <div class="col-md-8">
+      <div class="col-md-8"  *ngIf="!auth_serv.isLogedIn()">
         <div class="mb-4">
         <h3>Page de connection</h3>
       </div>
-      <form action="#" method="post">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group first">
           <label for="username">Login</label>
-          <input type="text" class="form-control" id="username">
+          <input formControlName="username" id="username" name="username" type="text" class="form-control" placeholder="login">
 
         </div>
         <div class="form-group last mb-4">
           <label for="password">Mot de pass</label>
-          <input type="password" class="form-control" id="password">
+          <input formControlName="password" id="password" name="password" type="password" class="form-control" placeholder="password">
         </div>
         
         <div class="d-flex mb-5 align-items-center">
           <span class="ml-auto"><a href="#" class="forgot-pass">Mot de pass oublié</a></span> 
         </div>
 
-        <input type="submit" value="Connecter" class="btn text-white btn-block btn-success">
+        <input *ngIf="!load" type="submit" value="Connecter" class="btn text-white btn-block btn-success">
+         
+        <button class="btn btn-success" *ngIf="load">
+          <span class="spinner-border spinner-border-sm"></span>
+          <span>Loading..</span>
+        </button>
         
       </form>
 
+
+
+      <!--
       <button class="btn btn-info" (click)="auth()">test login</button>
       <br>
       <button class="btn btn-danger" (click)="testme()">test token</button>
@@ -34,6 +42,11 @@
       <button class="btn btn-warning" (click)="test_lire()">test lire</button>
       <br>
       <button class="btn btn-light" (click)="test_ecrire()">test ecrire</button>
+      -->
+      
+      </div>
+      <div class="col-md-8"  *ngIf="auth_serv.isLogedIn()">
+        Bienvenu
       </div>
     </div>
   </div>
