--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,19 +1,19 @@
- <!-- The sidebar -->
- <div class="container-fluid">
-    <div class="sidebar">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">Utilisateurs</a>
-    <a href="#contact">Permission</a>
-    <a href="#about">Rôle</a>
-    <a href="#about">Cours</a>
-    <a href="#about">Exerices</a>
-    <a href="#about">Examens</a>
-    <a href="#about">Niveau</a>
-    <a href="#about">Grade</a>
+ <div class="p_admin">
+  <!-- The sidebar -->
+  <div class="container-fluid">
+      <div class="sidebar">
+      <a routerLink="acceuil" routerLinkActive="active">Acceuil</a>
+      <a routerLink="users" routerLinkActive="active" >Utilisateurs</a>
+      <a >Rôle</a>
+      <a >Cours</a>
+      <a >Exerices</a>
+      <a >Examens</a>
+      <a >Niveau</a>
+    </div>
+    
+    <!-- Page content -->
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div> 
   </div>
-  
-  <!-- Page content -->
-  <div class="content">
-    tset
-  </div> 
- </div>
+</div>
