--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
       <div class="sidebar">
       <a routerLink="acceuil" routerLinkActive="active">Acceuil</a>
       <a routerLink="users" routerLinkActive="active" >Utilisateurs</a>
-      <a >Rôle</a>
+      <a routerLink="role" routerLinkActive="active">Rôle</a>
       <a >Cours</a>
       <a >Exerices</a>
       <a >Examens</a>
