--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -19,7 +19,7 @@
           <li class="nav-item dropdown" *ngIf="auth_serv.isLogedIn()">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Profil</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item"  >Password</a></li>
+              <li><a class="dropdown-item" routerLink="profil/password" >Password</a></li>
               <li><a class="dropdown-item" routerLink="profil/avatar">Avatar</a></li>
             </ul>
           </li>
