get niveau & cycle

--- a/src/app/profil/password/password.component.html
+++ b/src/app/profil/password/password.component.html
@@ -16,7 +16,7 @@
 
   
 <!-- The Modal -->
-<div class="modal" id="password_msg">
+<div class="modal fade" id="password_msg">
     <div class="modal-dialog">
       <div class="modal-content">
   
