--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -15,14 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>  
-
-          <li class="nav-item dropdown" *ngIf="auth_serv.isLogedIn()">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Profil</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" routerLink="profil/password" >Password</a></li>
-              <li><a class="dropdown-item" routerLink="profil/avatar">Avatar</a></li>
-            </ul>
-          </li>
+          <li class="nav-item"  *ngIf="auth_serv.isLogedIn()">
+            <a class="nav-link" routerLink="profil">Profil</a>
+          </li>  
 
           <li class="nav-item" *ngIf="auth_serv.isLogedIn() && auth_serv.hasRole('admin')">
             <a class="nav-link" routerLink="admin">Dashbord</a>
