--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,3 +1,12 @@
+
 <div class="container">
+    <ul class="list-group list-group-horizontal mb-5">
+        <li class="list-group-item" routerLink="password">Password</li>
+        <li class="list-group-item" routerLink="avatar">Avatar</li>
+        <li class="list-group-item" routerLink="niveau">Niveau</li>
+        <li class="list-group-item">Fourth item</li>
+      </ul> 
     <router-outlet></router-outlet>
 </div> 
+
+
