update level profil

--- a/src/app/profil/avatar/avatar.component.html
+++ b/src/app/profil/avatar/avatar.component.html
@@ -15,3 +15,30 @@
     <div class="col-6">
     </div>
 </div>
+
+
+
+<!-- The Modal -->
+<div class="modal fade" id="Avatar_user">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Avatar</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+            Avatar mis à jour !
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
