--- a/src/app/profil/password/password.component.html
+++ b/src/app/profil/password/password.component.html
@@ -10,7 +10,11 @@
         Les mots de passe ne correspondent pas.
       </div>
     </div>
-    <button class="btn btn-primary">Modifier</button>
+    <button *ngIf="!load_update_password" class="btn btn-success">Modifier</button>
+    <button class="btn btn-success" *ngIf="load_update_password">
+      <span class="spinner-border spinner-border-sm"></span>
+      <span>En cours de modification ....</span>
+    </button>
   </form> 
 
 
@@ -28,7 +32,7 @@
   
         <!-- Modal body -->
         <div class="modal-body">
-            Mot de passe mis à jour !
+            {{message}}
         </div>
   
         <!-- Modal footer -->
