--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,6 +1,7 @@
 
 <div class="container">
-    <ul class="list-group list-group-horizontal mb-5">
+    <ul class="list-group list-group-horizontal mb-5 bg-transparent">
+        <li class="list-group-item" routerLink="information">Information</li>
         <li class="list-group-item" routerLink="password">Password</li>
         <li class="list-group-item" routerLink="avatar">Avatar</li>
         <li class="list-group-item" routerLink="niveau">Niveau</li>
