--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,7 +4,7 @@
       <a routerLink="acceuil" routerLinkActive="active">Acceuil</a>
       <a routerLink="users" routerLinkActive="active" >Utilisateurs</a>
       <a routerLink="role" routerLinkActive="active">Rôle</a>
-      <a >Type</a>
+      <a routerLink="type" routerLinkActive="active">Type</a>
       <a >Cours</a>
       <a >Exerices</a>
       <a >Examens</a>
