--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,10 @@
 <footer class="py-3 styl_footer"> 
     <ul class="nav justify-content-center pb-3 mb-3"> 
         <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
+            <a href="#" class="nav-link px-2 text-body-secondary">Acceuil</a>
         </li> 
         <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
-        </li> 
-        <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary">Pricing</a>
+            <a href="#" class="nav-link px-2 text-body-secondary">Contactez-Nous</a>
         </li> 
         <li class="nav-item">
             <a href="#" class="nav-link px-2 text-body-secondary">FAQs</a>
@@ -16,5 +13,5 @@
             <a href="#" class="nav-link px-2 text-body-secondary">About</a>
         </li> 
     </ul> 
-    <p class="text-center text-body-secondary">© 2025 Company, Inc</p> 
+    <p class="text-center text-body-secondary">© 2025 UM5, FSR</p> 
 </footer> 
