--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,7 +5,7 @@
       <a routerLink="users" routerLinkActive="active" >Utilisateurs</a>
       <a routerLink="role" routerLinkActive="active">Rôle</a>
       <a routerLink="type" routerLinkActive="active">Type</a>
-      <a >Cours</a>
+      <a routerLink="cours" routerLinkActive="active">Cours</a>
       <a >Exerices</a>
       <a >Examens</a>
       <a >Niveau</a>
