--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,3 +45,34 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+<!-- The Modal -->
+<div class="modal fade" id="login_user">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Login</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+          {{message}}
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
+      </div>
+
+    </div>
+  </div>
+</div>
