--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav  me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" routerLink="/cours">Cours</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" >Link</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" >Link</a>
           </li>  
           <li class="nav-item"  *ngIf="auth_serv.isLogedIn()">
             <a class="nav-link" routerLink="profil/information">Profil</a>
