Cours user part1

--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -10,10 +10,10 @@
             <a class="nav-link" routerLink="/cours">Cours</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Link</a>
+            <a class="nav-link" >Exercice</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Link</a>
+            <a class="nav-link" >Examen</a>
           </li>  
           <li class="nav-item"  *ngIf="auth_serv.isLogedIn()">
             <a class="nav-link" routerLink="profil/information">Profil</a>
